# dirc-cpp-orig

./: .gitignore  CMakeLists.txt  vgcore.17973
core/: CMakeLists.txt  channel_event_handler.h  chat_event_handler.h  config.cpp  config.h  irc_channel.cpp  irc_channel.h  irc_channel_user.cpp  irc_channel_user.h  irc_entity_repository.cpp  irc_entity_repository.h  irc_event_handler_mixin.h  irc_message.cpp  irc_message.h  irc_message_commands.cpp  irc_message_commands.h  irc_message_handler_mixin.cpp  irc_message_handler_mixin.h  irc_message_parser.cpp  irc_message_parser.h  irc_server.cpp  irc_server.h  irc_server_commands.h  irc_user.cpp  irc_user.h  irc_user_repository.h  server_event_handler.h  user_event_handler.h
core/unit-tests/: #irc_server_test.cpp#  .#irc_server_test.cpp  CMakeLists.txt  irc_channel_test.cpp  irc_entity_repository_test.cpp  irc_message_test.cpp  irc_server_test.cpp
text/: CMakeLists.txt  main.cpp  server_run_loop.h  text_app.cpp  text_app.h  text_channel_event_handler.cpp  text_channel_event_handler.h  text_server_event_handler.cpp  text_server_event_handler.h
